# ftqc-workbench

./: .gitignore  README.md  environment.yml  pyproject.toml
benchmarks/: benchmark_cuccaro_adder.py  benchmark_multi_controlled_x.py
docs/: PROJECT_CONTROL.md  api_examples.md  final_project_audit.md  future_work.md  integer_adder_notes.md  multi_controlled_x_ancilla_notes.md  readout_mitigation_example.md  readout_mitigation_notes.md  references.md  resource_model.md  simulation_conventions.md  technical_details.md  toffoli_resource_model_notes.md  week_05_day_02_statevector_operation_application.md
docs/benchmarks/: cuccaro_adder.csv  cuccaro_adder.md  multi_controlled_x.csv  multi_controlled_x.md
docs/weekly_logs/: week_01.md  week_02.md  week_03.md  week_04.md  week_05.md  week_06.md  week_07.md  week_08.md  week_09.md  week_10.md  week_11.md  week_12.md
src/qc_compiler/: __init__.py
src/qc_compiler/circuits/: __init__.py  builders.py  circuit.py  operation.py
src/qc_compiler/gates/: __init__.py  gate.py  library.py
src/qc_compiler/mitigation/: __init__.py  readout.py
src/qc_compiler/resources/: __init__.py  (+4 more)
tests/benchmarks/: test_cuccaro_adder.py  test_multi_controlled_x.py
tests/circuits/: test_builders.py  test_circuit.py  test_operation.py
tests/gates/: test_gate.py  test_library.py
tests/mitigation/: test_readout.py
tests/resources/: test_depth.py  test_estimate.py  test_estimator.py  test_expanded.py
tests/simulation/: test_basis.py  test_matrices.py  test_statevector.py  test_unitary.py
tests/verification/: test_equivalence.py
(+7 files in other folders)
